force-app/main/default/objects/Drink_Order__c/Drink_Order__c.object-meta.xml
<CustomObject>
    <label>Drink Order</label>
    <nameField>
        <displayFormat>ORDER-{0000}</displayFormat>
        <label>Drink Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drink Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>