force-app/main/default/objects/Drink_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Drink Order</relationshipLabel>
    <relationshipName>Drink_Order</relationshipName>
    <type>Lookup</type>
</CustomField>