force-app/main/default/objects/Drink_Order__c/fields/Flavor__c.field-meta.xml
<CustomField>
    <fullName>Flavor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flavor</label>
    <referenceTo>Flavor__c</referenceTo>
    <relationshipLabel>Drink Order</relationshipLabel>
    <relationshipName>Drink_Order</relationshipName>
    <type>Lookup</type>
</CustomField>