force-app/main/default/objects/Drink_Order__c/fields/Fulfillment_Queue__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Queue__c</fullName>
    <label>Fulfillment Queue</label>
    <referenceTo>Fulfillment_Queue__c</referenceTo>
    <relationshipLabel>Drink Order</relationshipLabel>
    <relationshipName>Drink_Order</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>