force-app/main/default/objects/Drink_Order__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <formula>Flavor__r.Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>